src/test/deca/syntax/valid/notprovided/declBoolean.deca
{
boolean x = true;
boolean y = (2==3);
}