src/test/deca/syntax/invalid/test_synt4.deca
//Resultat:
//      Erreur syntaxique : declaration invalide
{
bool x x x;
x=3.2;
}
